Updated user caching to cache and encrypt via a database over config.yml